--- a/static/css/bartenders_course_responsive.css
+++ b/static/css/bartenders_course_responsive.css
@@ -17,8 +17,8 @@
     /* ---------------- Portrait ----------- */
     /* iphone 6, 6s, 7, 8 */
     @media only screen
-        and (min-device-width: 375px)
-        and (max-device-height: 667px)
+        and (-webkit-min-device-width: 375px)
+        and (-webkit-max-device-height: 667px)
         and (-webkit-device-pixel-ratio: 2)
         and (orientation: portrait) {
         .header {
@@ -622,8 +622,8 @@
         }
     }
     @media only screen
-        and (min-device-width: 667px)
-        and (max-device-height: 375px)
+        and (-webkit-min-device-width: 667px)
+        and (-webkit-max-device-height: 375px)
         and (-webkit-device-pixel-ratio: 2)
         and (orientation: landscape) {
         .header {
@@ -1224,8 +1224,8 @@
     }
     /* iphone 6+, 6s+, 7+, 8+ */
     @media only screen 
-        and (min-device-width: 414px) 
-        and (max-device-height: 736px) 
+        and (-webkit-min-device-width: 414px) 
+        and (-webkit-max-device-height: 736px) 
         and (-webkit-device-pixel-ratio: 3) 
         and (orientation: portrait) {
             .header {
@@ -1826,8 +1826,8 @@
         }
     
     @media only screen 
-        and (min-device-width: 736px) 
-        and (max-device-height: 414px) 
+        and (-webkit-min-device-width: 736px) 
+        and (-webkit-max-device-height: 414px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: landscape) {
             .header {
@@ -2427,11 +2427,11 @@
             }
         }
         
-    /* iPhone X */
+    /* iPhone X & XS*/
     /* 2436x1125px at 458ppi */
     @media only screen 
-        and (min-device-width : 375px) 
-        and (max-device-height : 812px) 
+        and (-webkit-min-device-width : 375px) 
+        and (-webkit-max-device-height : 812px) 
         and (-webkit-device-pixel-ratio : 3)
         and (orientation: portrait) {
             .header {
@@ -3034,11 +3034,11 @@
                 cursor: pointer;
             }
         }
-    
+    /* iPhone XS */
     @media only screen 
-        and (min-device-width : 812px) 
-        and (max-device-height : 375px) 
-        and (-webkit-device-pixel-ratio : 3)
+        and (-webkit-min-device-width: 812px) 
+        and (-webkit-max-device-height: 375px) 
+        and (-webkit-device-pixel-ratio: 3)
         and (orientation: landscape) {
             .header {
                 display: none;
@@ -3131,7 +3131,7 @@
             .overlay-content {
                 position: relative;
                 top: 0%;
-                width: 100%;
+                width: 100vw;
                 height: 100vh;
                 text-align: center;
                 display: flex;
@@ -3639,8 +3639,8 @@
     /* iPhone XR */
     /* 1792x828px at 326ppi */ 
     @media only screen 
-        and (min-device-width : 414px) 
-        and (max-device-height : 896px) 
+        and (-webkit-min-device-width : 414px) 
+        and (-webkit-max-device-height : 896px) 
         and (-webkit-device-pixel-ratio : 2)
         and (orientation: portrait) {
         .header {
@@ -4245,8 +4245,8 @@
     }
     /* iPhone XR landscape */
     @media only screen
-        and (min-device-width : 896px)
-        and (max-device-height : 414px)
+        and (-webkit-min-device-width : 896px)
+        and (-webkit-max-device-height : 414px)
         and (-webkit-device-pixel-ratio : 2)
         and (orientation : landscape) {
             .header {
@@ -4848,8 +4848,8 @@
     /* iPhone XS */
     /* 2688x1242px at 458ppi */
     @media only screen 
-        and (device-width : 414px) 
-        and (device-height : 896px) 
+        and (-webkit-device-width : 414px) 
+        and (-webkit-device-height : 896px) 
         and (-webkit-device-pixel-ratio : 3)
         and (orientation: portrait) {
             .header {
@@ -5452,8 +5452,8 @@
             }
         }
     @media only screen 
-        and (device-width : 375px)
-        and (device-height : 812px)
+        and (-webkit-min-device-width : 375px)
+        and (-webkit-max-device-height : 812px)
         and (-webkit-device-pixel-ratio : 3)
         and (orientation : landscape) {
             .header {
@@ -6055,8 +6055,8 @@
     /* iPhone XS Max */
     /* 2688x1242px at 458ppi */
     @media only screen 
-        and (min-device-width : 414px) 
-        and (max-device-height : 896px) 
+        and (-webkit-min-device-width : 414px) 
+        and (-webkit-max-device-height : 896px) 
         and (-webkit-device-pixel-ratio : 3)
         and (orientation : portrait) {
             .header {
@@ -6659,8 +6659,8 @@
             }
     }
     @media only screen 
-        and (min-device-width : 896px) 
-        and (max-device-height : 414px) 
+        and (-webkit-min-device-width : 896px) 
+        and (-webkit-max-device-height : 414px) 
         and (-webkit-device-pixel-ratio : 3)
         and (orientation : landscape) {
         .header {
@@ -7262,8 +7262,8 @@
     }
     /* 2532x1170 pixels at 460ppi (iPhone 12/13/12Pro/13Pro)*/
     @media only screen 
-        and (min-device-width: 390px) 
-        and (max-device-height: 844px) 
+        and (-webkit-min-device-width: 390px) 
+        and (-webkit-max-device-height: 844px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: portrait) {
         .header {
@@ -7868,8 +7868,8 @@
     }
     /* 2532x1170 pixels at 460ppi (iPhone 12/13/12Pro/13Pro)*/
     @media only screen 
-        and (min-device-width: 844px) 
-        and (max-device-height: 390px) 
+        and (-webkit-min-device-width: 844px) 
+        and (-webkit-max-device-height: 390px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: landscape) {
         .header {
@@ -8471,8 +8471,8 @@
     }
     /* 2778x1284 pixels at 458ppi (12ProMax/13ProMax)*/
     @media only screen 
-        and (min-device-width: 428px) 
-        and (max-device-height: 926px) 
+        and (-webkit-min-device-width: 428px) 
+        and (-webkit-max-device-height: 926px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: portrait) {
         .header {
@@ -9074,8 +9074,8 @@
         }
     }
     @media only screen
-        and (min-device-width: 926px) 
-        and (max-device-height: 428px) 
+        and (-webkit-min-device-width: 926px) 
+        and (-webkit-max-device-height: 428px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: landscape) {
         .header {
@@ -9694,8 +9694,8 @@
     /* ---------------- Portrait ----------- */
     /* iphone 6, 6s, 7, 8 */
     @media only screen
-        and (min-device-width: 375px)
-        and (max-device-height: 667px)
+        and (-webkit-min-device-width: 375px)
+        and (-webkit-max-device-height: 667px)
         and (-webkit-device-pixel-ratio: 2)
         and (orientation: portrait) {
         .header {
@@ -10299,8 +10299,8 @@
         }
     }
     @media only screen
-        and (min-device-width: 667px)
-        and (max-device-height: 375px)
+        and (-webkit-min-device-width: 667px)
+        and (-webkit-max-device-height: 375px)
         and (-webkit-device-pixel-ratio: 2)
         and (orientation: landscape) {
         .header {
@@ -10901,8 +10901,8 @@
     }
     /* iphone 6+, 6s+, 7+, 8+ */
     @media only screen 
-        and (min-device-width: 414px) 
-        and (max-device-height: 736px) 
+        and (-webkit-min-device-width: 414px) 
+        and (-webkit-max-device-height: 736px) 
         and (-webkit-device-pixel-ratio: 3) 
         and (orientation: portrait) {
             .header {
@@ -11503,8 +11503,8 @@
         }
     
     @media only screen 
-        and (min-device-width: 736px) 
-        and (max-device-height: 414px) 
+        and (-webkit-min-device-width: 736px) 
+        and (-webkit-max-device-height: 414px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: landscape) {
             .header {
@@ -12107,8 +12107,8 @@
     /* iPhone X */
     /* 2436x1125px at 458ppi */
     @media only screen 
-        and (min-device-width : 375px) 
-        and (max-device-height : 812px) 
+        and (-webkit-min-device-width : 375px) 
+        and (-webkit-max-device-height : 812px) 
         and (-webkit-device-pixel-ratio : 3)
         and (orientation: portrait) {
             .header {
@@ -12713,8 +12713,8 @@
         }
     
     @media only screen 
-        and (min-device-width : 812px) 
-        and (max-device-height : 375px) 
+        and (-webkit-min-device-width : 812px) 
+        and (-webkit-max-device-height : 375px) 
         and (-webkit-device-pixel-ratio : 3)
         and (orientation: landscape) {
             .header {
@@ -13316,8 +13316,8 @@
     /* iPhone XR */
     /* 1792x828px at 326ppi */ 
     @media only screen 
-        and (min-device-width : 414px) 
-        and (max-device-height : 896px) 
+        and (-webkit-min-device-width : 414px) 
+        and (-webkit-max-device-height : 896px) 
         and (-webkit-device-pixel-ratio : 2)
         and (orientation: portrait) {
         .header {
@@ -13922,8 +13922,8 @@
     }
     /* iPhone XR landscape */
     @media only screen
-        and (min-device-width : 896px)
-        and (max-device-height : 414px)
+        and (-webkit-min-device-width : 896px)
+        and (-webkit-max-device-height : 414px)
         and (-webkit-device-pixel-ratio : 2)
         and (orientation : landscape) {
             .header {
@@ -14525,8 +14525,8 @@
     /* iPhone XS */
     /* 2688x1242px at 458ppi */
     @media only screen 
-        and (device-width : 414px) 
-        and (device-height : 896px) 
+        and (-webkit-min-device-width : 414px) 
+        and (-webkit-max-device-height : 896px) 
         and (-webkit-device-pixel-ratio : 3)
         and (orientation: portrait) {
             .header {
@@ -15129,8 +15129,8 @@
             }
         }
     @media only screen 
-        and (device-width : 375px)
-        and (device-height : 812px)
+        and (-webkit-min-device-width : 375px)
+        and (-webkit-max-device-height : 812px)
         and (-webkit-device-pixel-ratio : 3)
         and (orientation : landscape) {
             .header {
@@ -15732,8 +15732,8 @@
     /* iPhone XS Max */
     /* 2688x1242px at 458ppi */
     @media only screen 
-        and (min-device-width : 414px) 
-        and (max-device-height : 896px) 
+        and (-webkit-min-device-width : 414px) 
+        and (-webkit-max-device-height : 896px) 
         and (-webkit-device-pixel-ratio : 3)
         and (orientation : portrait) {
             .header {
@@ -16336,8 +16336,8 @@
             }
     }
     @media only screen 
-        and (min-device-width : 896px) 
-        and (max-device-height : 414px) 
+        and (-webkit-min-device-width : 896px) 
+        and (-webkit-max-device-height : 414px) 
         and (-webkit-device-pixel-ratio : 3)
         and (orientation : landscape) {
         .header {
@@ -16939,8 +16939,8 @@
     }
     /* 2532x1170 pixels at 460ppi (iPhone 12/13/12Pro/13Pro)*/
     @media only screen 
-        and (min-device-width: 390px) 
-        and (max-device-height: 844px) 
+        and (-webkit-min-device-width: 390px) 
+        and (-webkit-max-device-height: 844px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: portrait) {
         .header {
@@ -17545,8 +17545,8 @@
     }
     /* 2532x1170 pixels at 460ppi (iPhone 12/13/12Pro/13Pro)*/
     @media only screen 
-        and (min-device-width: 844px) 
-        and (max-device-height: 390px) 
+        and (-webkit-min-device-width: 844px) 
+        and (-webkit-max-device-height: 390px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: landscape) {
         .header {
@@ -18148,8 +18148,8 @@
     }
     /* 2778x1284 pixels at 458ppi (12ProMax/13ProMax)*/
     @media only screen 
-        and (min-device-width: 428px) 
-        and (max-device-height: 926px) 
+        and (-webkit-min-device-width: 428px) 
+        and (-webkit-max-device-height: 926px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: portrait) {
         .header {
@@ -18751,8 +18751,8 @@
         }
     }
     @media only screen
-        and (min-device-width: 926px) 
-        and (max-device-height: 428px) 
+        and (-webkit-min-device-width: 926px) 
+        and (-webkit-max-device-height: 428px) 
         and (-webkit-device-pixel-ratio: 3)
         and (orientation: landscape) {
         .header {
